  Mode on Windows
  (Manuel Hornung, review by David Allsopp and Nicolás Ojeda Bär)

* #9601: Return EPERM for EUNKNOWN -1314 in win32unix (principally affects
  error handling when Unix.symlink is unavailable)
  (David Allsopp, review by Xavier Leroy)

### Tools:


### Manual and documentation:


### Compiler user-interface and warnings:

- #9583: when bytecode linking fails due to an unavailable module, the module
  that requires it is now included in the error message.
  (Nicolás Ojeda Bär, review by Vincent Laviron)

- #9615: Attach package type attributes to core_type.
  When parsing constraints on a first class module, attributes found after the
  module type were parsed but ignored. Now they are attached to the
  corresponding core_type.
  (Etienne Millon, review by Thomas Refis)

### Internal/compiler-libs changes:

- #9493, #9520, #9563, #9599: refactor the pattern-matching compiler
  (Thomas Refis and Gabriel Scherer, review by Florian Angeletti)

- #9604: refactoring of the ocamltest codebase.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Sébastien Hinderer)

- #9498, #9511: make the pattern-matching analyzer more robust to
  or-pattern explosion, by stopping after the first counter-example to
  exhaustivity
  (Gabriel Scherer, review by Luc Maranget, Thomas Refis and Florian Angeletti,
   report by Alex Fedoseev through Hongbo Zhang)

### Build system:

- #9332, #9518, #9529: Cease storing C dependencies in the codebase. C
  dependencies are generated on-the-fly in development mode. For incremental
  compilation, the MSVC ports require GCC to be present.
  (David Allsopp, review by Sébastien Hinderer, YAML-fu by Stephen Dolan)

- #9527: stop including configuration when running 'clean' rules
  to avoid C dependency recomputation.
  (Gabriel Scherer, review by David Allsopp)

### Bug fixes:

- #9521, #9522: correctly fail when comparing functions
  with Closure and Infix tags.
  (Gabriel Scherer and Jeremy Yallop and Xavier Leroy,