@@ -86,6 +86,10 @@ Working version
 
 ### Compiler user-interface and warnings:
 
+- #9560: Report partial application warnings on type errors in applications.
+  (Stephen Dolan, report and testcase by whitequark, review by Gabriel Scherer
+   and Thomas Refis)
+
 - #9583: when bytecode linking fails due to an unavailable module, the module
   that requires it is now included in the error message.
   (Nicolás Ojeda Bär, review by Vincent Laviron)
